--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,20 @@
 <resources>
 
     <string name="app_name">NexusPad</string>
+    <string name="contacts">Contacts</string>
+    <string name="events">Events</string>
+    <string name="journal">Journal</string>
+    <string name="docs">Docs</string>
+    <string name="photos">Photos</string>
+    <string name="bookmarks">Bookmarks</string>
+    <string name="settings">Settings</string>
+    <string name="username_or_email">Username or email</string>
+    <string name="password">Password</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="lbl_sign_up">First time here? Click here to sign up.</string>
+    <string name="err_empty_field">This field must be be empty.</string>
 
 </resources>
