--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,12 +10,17 @@
     <string name="bookmarks">Bookmarks</string>
     <string name="settings">Settings</string>
     <string name="username_or_email">Username or email</string>
+    <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
     <string name="lbl_sign_up">First time here? Click here to sign up.</string>
-    <string name="err_empty_field">This field must be be empty.</string>
+    <string name="lbl_login">Have an account? Click here to login.</string>
+    <string name="err_empty_field">This field must not be be empty.</string>
+    <string name="err_login_failed">Login failed. Please try again later.</string>
+    <string name="err_network">Please check your network connection.</string>
+    <string name="confirm_password">Confirm password</string>
 
 </resources>
