major refactoring of the adapters, fodlers and entries now use a separate adapter for each, and uses CompoundAdapter to combine the both, it is designed to be future-compatible with tablet UI

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="rename">Rename</string>
     <string name="empty_folder">Folder Is Empty</string>
     <string name="empty_bookmarks">No Bookmarks</string>
+    <string name="load_more">Load More…</string>
 
 </resources>
