--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="journal">Journal</string>
     <string name="docs">Docs</string>
     <string name="photos">Photos</string>
+    <string name="bookmark">Bookmark</string>
     <string name="bookmarks">Bookmarks</string>
     <string name="settings">Settings</string>
     <string name="folder">Folder</string>
@@ -34,6 +35,7 @@
     <string name="empty_folder">Folder Is Empty</string>
     <string name="empty_bookmarks">No Bookmarks</string>
     <string name="load_more">Load More…</string>
-    <string name="no_folders">No Folders</string>
+    <string name="name">Name</string>
+    <string name="web_address">Web Address</string>
 
 </resources>
