--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="photos">Photos</string>
     <string name="bookmark">Bookmark</string>
     <string name="bookmarks">Bookmarks</string>
-    <string name="settings">Settings</string>
+    <string name="logout">Logout</string>
     <string name="folder">Folder</string>
     <string name="username_or_email">Username or Email</string>
     <string name="email">Email</string>
@@ -32,6 +32,8 @@
     <string name="new_">New</string>
     <string name="new_folder">New Folder</string>
     <string name="new_bookmark">New Bookmark</string>
+    <string name="folder_name">Folder Name</string>
+    <string name="parent_folder">Parent Folder</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
@@ -41,5 +43,8 @@
     <string name="load_more">Load More…</string>
     <string name="title">Title</string>
     <string name="web_address">Web Address</string>
+    <string name="note">Note</string>
+    <string name="tags">Tags</string>
+    <string name="root">ROOT</string>
 
 </resources>
