--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="new_">New</string>
     <string name="new_folder">New Folder</string>
     <string name="new_bookmark">New Bookmark</string>
+    <string name="new_doc">New Doc</string>
     <string name="folder_name">Folder Name</string>
     <string name="parent_folder">Parent Folder</string>
     <string name="edit">Edit</string>
@@ -44,6 +45,7 @@
     <string name="title">Title</string>
     <string name="web_address">Web Address</string>
     <string name="note">Note</string>
+    <string name="doc">Doc</string>
     <string name="tags">Tags</string>
     <string name="root">ROOT</string>
 
