--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="empty_folder">Folder Is Empty</string>
     <string name="empty_bookmarks">No Bookmarks</string>
     <string name="empty_docs">No Docs</string>
-    <string name="load_more">Load More…</string>
+    <string name="loading_more">Loading More…</string>
     <string name="title">Title</string>
     <string name="web_address">Web Address</string>
     <string name="note">Note</string>
