--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="journal">Journal</string>
     <string name="docs">Docs</string>
     <string name="photos">Photos</string>
+    <string name="albums">Albums</string>
     <string name="bookmark">Bookmark</string>
     <string name="bookmarks">Bookmarks</string>
     <string name="logout">Logout</string>
