please see the commit comment

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="folders">Folders</string>
     <string name="more">More</string>
     <string name="new_">New</string>
+    <string name="new_photos">New Photos</string>
     <string name="new_folder">New Folder</string>
     <string name="new_bookmark">New Bookmark</string>
     <string name="new_doc">New Doc</string>
