--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="journal">Journal</string>
     <string name="docs">Docs</string>
     <string name="photos">Photos</string>
+    <string name="photos_upload">Photos Upload</string>
     <string name="albums">Albums</string>
     <string name="bookmark">Bookmark</string>
     <string name="bookmarks">Bookmarks</string>
@@ -66,5 +67,7 @@
     <string name="porfile_image">Porfile Image</string>
     <string name="no_name">(No Name)</string>
     <string name="usage_unavailable">(usage unavailable)</string>
+    <!-- example: 50%  150/300 -->
+    <string name="formatted_progress">%1$d%%  %2$d/%3$d</string>
 
 </resources>
