--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="ok">OK</string>
     <string name="app_name">NexusPad</string>
     <string name="contacts">Contacts</string>
     <string name="events">Events</string>
@@ -36,6 +37,7 @@
     <string name="new_">New</string>
     <string name="search">Search</string>
     <string name="new_photos">New Photos</string>
+    <string name="new_albums">New Albums</string>
     <string name="new_folder">New Folder</string>
     <string name="new_bookmark">New Bookmark</string>
     <string name="new_doc">New Doc</string>
@@ -72,5 +74,10 @@
     <string name="formatted_progress">%1$d%%  %2$d/%3$d</string>
     <string name="upload_completed">Upload completed</string>
     <string name="upload_failed">Upload failed</string>
+    <string name="add_more">Add More…</string>
 
+    <plurals name="numberOfPhotos">
+        <item quantity="one">1 photo</item>
+        <item quantity="other">%d photos</item>
+    </plurals>
 </resources>
