agenda view in calendar module

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="empty_bookmarks">No Bookmarks</string>
     <string name="empty_contacts">No Contacts</string>
     <string name="empty_docs">No Docs</string>
+    <string name="empty_events">No Events</string>
     <string name="loading_more">Loading More…</string>
     <string name="title">Title</string>
     <string name="web_address">Web Address</string>
