--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="new_album">New Album</string>
     <string name="new_folder">New Folder</string>
     <string name="new_bookmark">New Bookmark</string>
+    <string name="new_contact">New Contact</string>
     <string name="new_doc">New Doc</string>
     <string name="folder_name">Folder Name</string>
     <string name="parent_folder">Parent Folder</string>
