--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="rename">Rename</string>
-    <string name="empty_folder">Folder Is Empty</string>
+    <string name="empty_folder">The folder is empty</string>
     <string name="empty_bookmarks">No Bookmarks</string>
     <string name="empty_contacts">No Contacts</string>
     <string name="empty_docs">No Docs</string>
