--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,8 +106,8 @@
     <string name="from">FROM</string>
     <string name="to">TO</string>
     <string name="all_day">ALL DAY</string>
-    <string name="event">Event</string>
     <string name="month">Month</string>
+    <string name="month_view">Month View</string>
     <string name="agenda">Agenda</string>
     <string name="undo">Undo</string>
 
