--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -72,6 +72,9 @@
     <string name="note">Note</string>
     <string name="tags">Tags</string>
     <string name="root">ROOT</string>
+
+    <!-- account settings -->
+    <string name="account_settings">Account Settings</string>
     <string name="account_email">Email</string>
     <string name="account_usage">Usage</string>
     <string name="email_support">Email Support</string>
@@ -79,6 +82,7 @@
     <string name="support">Support</string>
     <string name="terms_of_use">Terms of Use</string>
     <string name="format_ac_usage">%1$s / %2$s</string>
+
     <!-- first name, last name -->
     <string name="format_ac_name">%1$s %2$s</string>
     <string name="about">About</string>
