--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="err_internal">An internal error has occurred. Please try again later.</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="folders">Folders</string>
+    <string name="select_folder">Select Folder</string>
+    <string name="calendars">Calendars</string>
     <string name="more">More</string>
     <string name="new_">New</string>
     <string name="search">Search</string>
@@ -105,7 +107,7 @@
 
     <string name="others">Others</string>
     <!-- example: Folders under Dev Libs -->
-    <string name="formatted_sub_folders">Folders under %1$s</string>
+    <string name="formatted_sub_folders">%1$s</string>
     <string name="phones">Phones</string>
     <string name="phone">Phone</string>
     <string name="empty_potos_promt">Click on the camera to add photos.</string>
